--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"> 
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my lion pic"> 
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my lion pic" title="Cute Lion"> 
 
 </body>
 </html>
